--- a/basic.def.html
+++ b/basic.def.html
@@ -54,7 +54,7 @@ an explicit instantiation declaration (<a href='temp.explicit'>[temp.explicit]</
 </p></li><li id='2.18'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#2.18'>(2.18)</a></div><p >it is
 an explicit specialization (<a href='temp.expl.spec'>[temp.expl.spec]</a>) whose
 <i ><a href='dcl.dcl#nt:declaration'>declaration</a></i> is not a definition.
-</p></li></ul><p >[&nbsp;<i>Example:</i> all but one of the following are definitions:
+</p></li></ul><p >[&nbsp;<i>Example:</i> All but one of the following are definitions:
 <span class='indexparent'><a class='index' id='example,definition'></a></span></p><pre class='codeblock'>
 int a;                          <span class='comment'>// defines <span class='texttt'>a</span>
 </span>extern const int c = 1;         <span class='comment'>// defines <span class='texttt'>c</span>
@@ -88,7 +88,7 @@ move constructor (<a href='class.copy'>[class.copy]</a>),
 copy assignment operator (<a href='class.copy'>[class.copy]</a>),
 move assignment operator (<a href='class.copy'>[class.copy]</a>),
 or destructor (<a href='class.dtor'>[class.dtor]</a>) member functions. <i>&nbsp;—&nbsp;end note</i>&nbsp;]
-[&nbsp;<i>Example:</i> given</p><pre class='codeblock'>
+[&nbsp;<i>Example:</i> Given</p><pre class='codeblock'>
 #include &lt;string&gt;
 
 struct C {
