--- a/basic.def.odr.html
+++ b/basic.def.odr.html
@@ -89,7 +89,7 @@ implicitly defined (see <a href='class.ctor'>[class.ctor]</a>, <a href='class.dt
 <a href='class.copy'>[class.copy]</a>). An inline function or variable shall be defined in every
 translation unit in which it is odr-used outside of a discarded statement.</p></div><div class='para' id='5'><div class='marginalizedparent'><a class='marginalized' href='#5'>5</a></div><p ><span class='indexparent'><a class='index' id='type,incomplete'></a></span>Exactly one definition of a class is required in a translation unit if
 the class is used in a way that requires the class type to be complete.
-[&nbsp;<i>Example:</i> the following complete translation unit is well-formed,
+[&nbsp;<i>Example:</i> The following complete translation unit is well-formed,
 even though it never defines <span class='texttt'>X</span>:</p><pre class='codeblock'>
 struct X;                       <span class='comment'>// declare <span class='texttt'>X</span> as a struct type
 </span>struct X* x1;                   <span class='comment'>// use <span class='texttt'>X</span> in pointer formation
