--- a/basic.fundamental.html
+++ b/basic.fundamental.html
@@ -89,7 +89,7 @@ collectively called
 A synonym for integral type is
 <span class='indexparent'><a class='index' id='signed_integer_representation,ones&#39;_complement'></a></span><span class='indexparent'><a class='index' id='signed_integer_representation,two&#39;s_complement'></a></span><span class='indexparent'><a class='index' id='signed_integer_representation,signed_magnitude'></a></span><a class='hidden_link' href='#def:integer_type' id='def:integer_type'><i>integer type</i></a>. The representations of integral types shall
 define values by use of a pure binary numeration system.<a class='footnotenum' href='#footnote-52'>52</a>
-[&nbsp;<i>Example:</i> this International Standard permits two's complement,
+[&nbsp;<i>Example:</i> This International Standard permits two's complement,
 ones' complement and signed magnitude representations for integral types.
 <i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='para' id='8'><div class='marginalizedparent'><a class='marginalized' href='#8'>8</a></div><p >There are three <a class='hidden_link' href='#def:floating_point_type' id='def:floating_point_type'><i>floating-point</i></a> types:
 <span class='indexparent'><a class='index' id='type,float'></a></span><span class='texttt'>float</span>,
