--- a/basic.life.html
+++ b/basic.life.html
@@ -2,7 +2,7 @@
 object or reference.
 An object is said to have <a class='hidden_link' href='#def:initialization,non-vacuous' id='def:initialization,non-vacuous'><i>non-vacuous initialization</i></a> if it is of a class or
 aggregate type and it or one of its subobjects is initialized by a constructor
-other than a trivial default constructor. [&nbsp;<i>Note:</i> initialization by a
+other than a trivial default constructor. [&nbsp;<i>Note:</i> Initialization by a
 trivial copy/move constructor is non-vacuous initialization. <i>&nbsp;—&nbsp;end note</i>&nbsp;]
 The lifetime of an object of type <span class='texttt'>T</span> begins when:
 </p><ul class='itemize'><li id='1.1'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#1.1'>(1.1)</a></div><p >storage with the proper alignment and size for type <span class='texttt'>T</span> is
