--- a/basic.start.html
+++ b/basic.start.html
@@ -37,7 +37,7 @@ The <span class='texttt'>main</span> function shall not be declared with a
 declares a variable <span class='texttt'>main</span> at global scope or that declares the name
 <span class='texttt'>main</span> with C language linkage (in any namespace) is ill-formed.
 The name <span class='texttt'>main</span> is
-not otherwise reserved. [&nbsp;<i>Example:</i> member functions, classes, and
+not otherwise reserved. [&nbsp;<i>Example:</i> Member functions, classes, and
 enumerations can be called <span class='texttt'>main</span>, as can entities in other
 namespaces. <i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='para' id='main-4'><div class='marginalizedparent'><a class='marginalized' href='#main-4'>4</a></div><p ><span class='indexparent'><a class='index' id='exit'></a></span><span class='indexparent'><a class='index' id='exit'></a></span><span class='indexparent'><a class='index' id='termination,program'></a></span>Terminating the program
 without leaving the current block (e.g., by calling the function
