--- a/dcl.fct.html
+++ b/dcl.fct.html
@@ -155,7 +155,7 @@ FIC S::*pm = &amp;S::f; <span class='comment'>// OK
 in a function declarator is not the same as
 adding cv-qualification on top of the function type.
 In the latter case, the cv-qualifiers are ignored.
-[&nbsp;<i>Note:</i> a function type that has a <i ><a href='dcl.decl#nt:cv-qualifier-seq'>cv-qualifier-seq</a></i> is not a
+[&nbsp;<i>Note:</i> A function type that has a <i ><a href='dcl.decl#nt:cv-qualifier-seq'>cv-qualifier-seq</a></i> is not a
 cv-qualified type; there are no cv-qualified function types. <i>&nbsp;—&nbsp;end note</i>&nbsp;]
 [&nbsp;<i>Example:</i></p><pre class='codeblock'>
 typedef void F();
