--- a/except.throw.html
+++ b/except.throw.html
@@ -82,7 +82,7 @@ No other thread synchronization is implied in exception handling.
 The implementation may then
 deallocate the memory for the exception object; any such deallocation
 is done in an unspecified way.
-[&nbsp;<i>Note:</i> a thrown exception does not
+[&nbsp;<i>Note:</i> A thrown exception does not
 propagate to other threads unless caught, stored, and rethrown using
 appropriate library functions; see <a href='propagation'>[propagation]</a> and <a href='futures'>[futures]</a>. <i>&nbsp;—&nbsp;end note</i>&nbsp;]</p></div><div class='para' id='5'><div class='marginalizedparent'><a class='marginalized' href='#5'>5</a></div><p ><span class='indexparent'><a class='index' id='exception_handling,exception_object,constructor'></a></span><span class='indexparent'><a class='index' id='exception_handling,exception_object,destructor'></a></span>When the thrown object is a class object, the constructor selected for
 the copy-initialization as well as the constructor selected for
