--- a/expr.static.cast.html
+++ b/expr.static.cast.html
@@ -80,8 +80,8 @@ inverse of an ill-formed standard conversion sequence.
 struct B { };
 struct D : private B { };
 void f() {
-  static_cast&lt;D*&gt;((B*)0);               <span class='comment'>// Error: B is a private base of D.
-</span>  static_cast&lt;int B::*&gt;((int D::*)0);   <span class='comment'>// Error: B is a private base of D.
+  static_cast&lt;D*&gt;((B*)0);               <span class='comment'>// error: <span class='texttt'>B</span> is a private base of <span class='texttt'>D</span>
+</span>  static_cast&lt;int B::*&gt;((int D::*)0);   <span class='comment'>// error: <span class='texttt'>B</span> is a private base of <span class='texttt'>D</span>
 </span>}
 </pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='para' id='8'><div class='marginalizedparent'><a class='marginalized' href='#8'>8</a></div><p >The lvalue-to-rvalue (<a href='conv.lval'>[conv.lval]</a>),
 array-to-pointer (<a href='conv.array'>[conv.array]</a>), and
