--- a/futures.html
+++ b/futures.html
@@ -146,7 +146,7 @@ the successful return from a call to a waiting function on the shared state.</p>
 the shared state ready until the calling thread exits. The destruction of
 each of that thread's objects with thread storage duration (<a href='basic.stc.thread'>[basic.stc.thread]</a>)
 is sequenced before making that shared state ready.</p></div><div class='para' id='state-11'><div class='marginalizedparent'><a class='marginalized' href='#state-11'>11</a></div><p >Access to the result of the same shared state may conflict (<a href='intro.multithread'>[intro.multithread]</a>).
-[&nbsp;<i>Note:</i> this explicitly specifies that the result of the shared state is
+[&nbsp;<i>Note:</i> This explicitly specifies that the result of the shared state is
 visible in the objects that reference this state in the sense of data race
 avoidance (<a href='res.on.data.races'>[res.on.data.races]</a>). For example, concurrent accesses through
 references returned by <span class='texttt'>shared_future::get()</span> (<a href='futures.shared_future'>[futures.shared_future]</a>)
