--- a/requirements.html
+++ b/requirements.html
@@ -717,7 +717,7 @@ p1 - p2
 <span class='texttt'>X::const_pointer</span> with no change in semantics.</p></div><div class='para' id='allocator.requirements-9'><div class='marginalizedparent'><a class='marginalized' href='#allocator.requirements-9'>9</a></div><p >An allocator may constrain the types on which it can be instantiated and the
 arguments for which its <span class='texttt'>construct</span> or <span class='texttt'>destroy</span> members may be
 called. If a type cannot be used with a particular allocator, the allocator
-class or the call to <span class='texttt'>construct</span> or <span class='texttt'>destroy</span> may fail to instantiate.</p><p >[&nbsp;<i>Example:</i> the following is an allocator class template supporting the minimal
+class or the call to <span class='texttt'>construct</span> or <span class='texttt'>destroy</span> may fail to instantiate.</p><p >[&nbsp;<i>Example:</i> The following is an allocator class template supporting the minimal
 interface that satisfies the requirements of
 Table <a href='#tab:utilities.allocator.requirements'>[tab:utilities.allocator.requirements]</a>:</p><pre class='codeblock'>
 template &lt;class Tp&gt;
