--- a/special.html
+++ b/special.html
@@ -749,7 +749,7 @@ that is, if the object is not of the destructor's class type and
 not of a class derived from the destructor's class type (including when
 the destructor is invoked via a null pointer value), the program has
 undefined behavior.
-[&nbsp;<i>Note:</i> invoking <span class='texttt'>delete</span> on a null pointer does not call the
+[&nbsp;<i>Note:</i> Invoking <span class='texttt'>delete</span> on a null pointer does not call the
 destructor; see <a href='expr.delete'>[expr.delete]</a>. <i>&nbsp;—&nbsp;end note</i>&nbsp;]
 [&nbsp;<i>Example:</i></p><pre class='codeblock'>
 struct B {
