--- a/stmt.dcl.html
+++ b/stmt.dcl.html
@@ -21,9 +21,8 @@ void f() {
   X a = 1;
   <span class='comment'>// ...
 </span>lx:
-  goto ly;          <span class='comment'>// OK, jump implies destructor
-</span>                    <span class='comment'>// call for <span class='texttt'>a</span> followed by construction
-</span>                    <span class='comment'>// again immediately following label <span class='texttt'>ly</span>
+  goto ly;          <span class='comment'>// OK, jump implies destructor call for <span class='texttt'>a</span> followed by
+</span>                    <span class='comment'>// construction again immediately following label <span class='texttt'>ly</span>
 </span>}
 </pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='para' id='4'><div class='marginalizedparent'><a class='marginalized' href='#4'>4</a></div><p ><span class='indexparent'><a class='index' id='initialization,automatic'></a></span><span class='indexparent'><a class='index' id='initialization,dynamic_block-scope'></a></span><span class='indexparent'><a class='index' id='initialization,local_static'></a></span><span class='indexparent'><a class='index' id='initialization,local_thread_local'></a></span>Dynamic initialization of a block-scope variable with
 static storage duration (<a href='basic.stc.static'>[basic.stc.static]</a>) or
