--- a/stmt.if.html
+++ b/stmt.if.html
@@ -32,10 +32,10 @@ template&lt;typename T, typename ... Rest&gt; void g(T&amp;&amp; p, Rest&amp;&am
   <span class='comment'>// ... handle <span class='texttt'>p</span>
 </span>
   if constexpr (sizeof...(rs) &gt; 0)
-    g(rs...);  <span class='comment'>// never instantiated with an empty argument list.
+    g(rs...);       <span class='comment'>// never instantiated with an empty argument list
 </span>}
 
-extern int x;   <span class='comment'>// no definition of <span class='texttt'>x</span> required
+extern int x;       <span class='comment'>// no definition of <span class='texttt'>x</span> required
 </span>
 int f() {
   if constexpr (true)
