--- a/stmt.stmt.html
+++ b/stmt.stmt.html
@@ -151,10 +151,10 @@ template&lt;typename T, typename ... Rest&gt; void g(T&amp;&amp; p, Rest&amp;&am
   <span class='comment'>// ... handle <span class='texttt'>p</span>
 </span>
   if constexpr (sizeof...(rs) &gt; 0)
-    g(rs...);  <span class='comment'>// never instantiated with an empty argument list.
+    g(rs...);       <span class='comment'>// never instantiated with an empty argument list
 </span>}
 
-extern int x;   <span class='comment'>// no definition of <span class='texttt'>x</span> required
+extern int x;       <span class='comment'>// no definition of <span class='texttt'>x</span> required
 </span>
 int f() {
   if constexpr (true)
@@ -451,9 +451,8 @@ void f() {
   X a = 1;
   <span class='comment'>// ...
 </span>lx:
-  goto ly;          <span class='comment'>// OK, jump implies destructor
-</span>                    <span class='comment'>// call for <span class='texttt'>a</span> followed by construction
-</span>                    <span class='comment'>// again immediately following label <span class='texttt'>ly</span>
+  goto ly;          <span class='comment'>// OK, jump implies destructor call for <span class='texttt'>a</span> followed by
+</span>                    <span class='comment'>// construction again immediately following label <span class='texttt'>ly</span>
 </span>}
 </pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='para' id='stmt.dcl-4'><div class='marginalizedparent'><a class='marginalized' href='#stmt.dcl-4'>4</a></div><p ><span class='indexparent'><a class='index' id='initialization,automatic'></a></span><span class='indexparent'><a class='index' id='initialization,dynamic_block-scope'></a></span><span class='indexparent'><a class='index' id='initialization,local_static'></a></span><span class='indexparent'><a class='index' id='initialization,local_thread_local'></a></span>Dynamic initialization of a block-scope variable with
 static storage duration (<a href='basic.stc.static'>[basic.stc.static]</a>) or
@@ -543,13 +542,9 @@ int a, (*(*b)(T2))(int), c, d;
 void f() {
   <span class='comment'>// disambiguation requires this to be parsed as a declaration:
 </span>  T1(a) = 3,
-  T2(4),                        <span class='comment'>// <span class='texttt'>T2</span> will be declared as
-</span>  (*(*b)(T2(c)))(int(d));       <span class='comment'>// a variable of type <span class='texttt'>T1</span>
-</span>                                <span class='comment'>// but this will not allow
-</span>                                <span class='comment'>// the last part of the
-</span>                                <span class='comment'>// declaration to parse
-</span>                                <span class='comment'>// properly since it depends
-</span>                                <span class='comment'>// on <span class='texttt'>T2</span> being a type-name
+  T2(4),                        <span class='comment'>// <span class='texttt'>T2</span> will be declared as a variable of type <span class='texttt'>T1</span>, but this will not
+</span>  (*(*b)(T2(c)))(int(d));       <span class='comment'>// allow the last part of the declaration to parse properly,
+</span>                                <span class='comment'>// since it depends on <span class='texttt'>T2</span> being a type-name
 </span>}
 </pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]<span class='indexparent'><a class='index' id='statement'></a></span>
 </p></div></div></div></div></body></html>
