--- a/support.exception.html
+++ b/support.exception.html
@@ -156,7 +156,7 @@ pointer as <span class='texttt'>exception_ptr</span>. <i>&nbsp;—&nbsp;end note
 <span class='texttt'>exception_ptr</span> objects shall access and modify only the
 <span class='texttt'>exception_ptr</span> objects themselves and not the exceptions they refer to.
 Use of <span class='texttt'>rethrow_exception</span> on <span class='texttt'>exception_ptr</span> objects that refer to
-the same exception object shall not introduce a data race. [&nbsp;<i>Note:</i> if
+the same exception object shall not introduce a data race. [&nbsp;<i>Note:</i> If
 <span class='texttt'>rethrow_exception</span> rethrows the same exception object (rather than a copy),
 concurrent access to that rethrown exception object may introduce a data race.
 Changes in the number of <span class='texttt'>exception_ptr</span> objects that refer to a
