--- a/temp.html
+++ b/temp.html
@@ -2247,7 +2247,7 @@ member of a class template following the <i ><a href='dcl.decl#nt:declarator-id'
 is not required when referring to the name of a previously
 declared member of the class template that declares a type
 or a class template.
-[&nbsp;<i>Note:</i> such names can be found using unqualified name lookup (<a href='basic.lookup.unqual'>[basic.lookup.unqual]</a>),
+[&nbsp;<i>Note:</i> Such names can be found using unqualified name lookup (<a href='basic.lookup.unqual'>[basic.lookup.unqual]</a>),
 class member lookup (<a href='class.qual'>[class.qual]</a>) into the current instantiation (<a href='temp.dep.type'>[temp.dep.type]</a>),
 or class member access expression lookup (<a href='basic.lookup.classref'>[basic.lookup.classref]</a>) when the
 type of the object expression is the current instantiation (<a href='temp.dep.expr'>[temp.dep.expr]</a>).
@@ -2767,7 +2767,7 @@ in which the
 refers to the current instantiation
 and that, when looked up, refers to at least one member of a class that is
 the current
-instantiation or a non-dependent base class thereof. [&nbsp;<i>Note:</i> if no such
+instantiation or a non-dependent base class thereof. [&nbsp;<i>Note:</i> If no such
 member is found, and the current instantiation has any dependent base classes,
 then the <i ><a href='expr.prim.id.qual#nt:qualified-id'>qualified-id</a></i> is a member of an unknown specialization;
 see below. <i>&nbsp;—&nbsp;end note</i>&nbsp;]</p></li><li id='dep.type-5.3'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#dep.type-5.3'>(5.3)</a></div><p >An <i ><a href='expr.prim.id#nt:id-expression'>id-expression</a></i> denoting the member in a class member access
@@ -2775,7 +2775,7 @@ expression (<a href='expr.ref'>[expr.ref]</a>) for which the type of the object 
 current instantiation, and the <i ><a href='expr.prim.id#nt:id-expression'>id-expression</a></i>, when looked
 up (<a href='basic.lookup.classref'>[basic.lookup.classref]</a>), refers to at least one member of a class
 that is the current
-instantiation or a non-dependent base class thereof. [&nbsp;<i>Note:</i> if no such
+instantiation or a non-dependent base class thereof. [&nbsp;<i>Note:</i> If no such
 member is found, and the current instantiation has any dependent base classes,
 then the <i ><a href='expr.prim.id#nt:id-expression'>id-expression</a></i> is a member of an unknown specialization;
 see below. <i>&nbsp;—&nbsp;end note</i>&nbsp;]
