--- a/thread.html
+++ b/thread.html
@@ -69,7 +69,7 @@ and hardware. The finest resolution provided by an implementation is called the
 <span class='texttt'>TrivialClock</span> requirements (<a href='time.clock.req'>[time.clock.req]</a>).</p></div><div class='para' id='req.timing-8'><div class='marginalizedparent'><a class='marginalized' href='#req.timing-8'>8</a></div><p >A function that takes an argument which specifies a timeout will throw if,
 during its execution, a clock, time point, or time duration throws an exception.
 Such exceptions are referred to as <a class='hidden_link' href='#def:timeout-related_exceptions' id='def:timeout-related_exceptions'><i>timeout-related exceptions</i></a>.
-[&nbsp;<i>Note:</i> instantiations of clock, time point and duration types supplied by
+[&nbsp;<i>Note:</i> Instantiations of clock, time point and duration types supplied by
 the implementation as specified in <a href='time.clock'>[time.clock]</a> do not throw exceptions.
 <i>&nbsp;—&nbsp;end note</i>&nbsp;]</p></div><div class='footnote' id='footnote-333'><div class='footnoteNumberParent'><a class='marginalized' href='#footnote-333'>333)</a></div><p >All
 implementations for which standard time units are meaningful must necessarily
@@ -419,7 +419,7 @@ construction is incorrect.
 </p></li></ul></div><div class='para' id='mutex.requirements.mutex-5'><div class='marginalizedparent'><a class='marginalized' href='#mutex.requirements.mutex-5'>5</a></div><p >The implementation shall provide lock and unlock operations, as described below.
 For purposes of determining the existence of a data race, these behave as
 atomic operations (<a href='intro.multithread'>[intro.multithread]</a>). The lock and unlock operations on
-a single mutex shall appear to occur in a single total order. [&nbsp;<i>Note:</i> this
+a single mutex shall appear to occur in a single total order. [&nbsp;<i>Note:</i> This
 can be viewed as the modification order (<a href='intro.multithread'>[intro.multithread]</a>) of the
 mutex. <i>&nbsp;—&nbsp;end note</i>&nbsp;]
 [&nbsp;<i>Note:</i> Construction and
@@ -1218,7 +1218,7 @@ An exceptional execution shall propagate the exception to the caller of
 <span class='texttt'>call_once</span>. Among all executions of <span class='texttt'>call_once</span> for any given
 <span class='texttt'>once_flag</span>: at most one shall be a returning execution; if there is a
 returning execution, it shall be the last active execution; and there are
-passive executions only if there is a returning execution. [&nbsp;<i>Note:</i> passive
+passive executions only if there is a returning execution. [&nbsp;<i>Note:</i> Passive
 executions allow other threads to reliably observe the results produced by the
 earlier returning execution. <i>&nbsp;—&nbsp;end note</i>&nbsp;]</p></div></div><div class='para' id='once.callonce-3'><div class='marginalizedparent'><a class='marginalized' href='#once.callonce-3'>3</a></div><div class='itemdescr'><p ><i>Synchronization:</i> For any given <span class='texttt'>once_flag</span>: all active executions occur in a total
 order; completion of an active execution synchronizes with (<a href='intro.multithread'>[intro.multithread]</a>)
@@ -1742,7 +1742,7 @@ the successful return from a call to a waiting function on the shared state.</p>
 the shared state ready until the calling thread exits. The destruction of
 each of that thread's objects with thread storage duration (<a href='basic.stc.thread'>[basic.stc.thread]</a>)
 is sequenced before making that shared state ready.</p></div><div class='para' id='futures.state-11'><div class='marginalizedparent'><a class='marginalized' href='#futures.state-11'>11</a></div><p >Access to the result of the same shared state may conflict (<a href='intro.multithread'>[intro.multithread]</a>).
-[&nbsp;<i>Note:</i> this explicitly specifies that the result of the shared state is
+[&nbsp;<i>Note:</i> This explicitly specifies that the result of the shared state is
 visible in the objects that reference this state in the sense of data race
 avoidance (<a href='res.on.data.races'>[res.on.data.races]</a>). For example, concurrent accesses through
 references returned by <span class='texttt'>shared_future::get()</span> (<a href='futures.shared_future'>[futures.shared_future]</a>)
