--- a/thread.once.callonce.html
+++ b/thread.once.callonce.html
@@ -16,7 +16,7 @@ An exceptional execution shall propagate the exception to the caller of
 <span class='texttt'>call_once</span>. Among all executions of <span class='texttt'>call_once</span> for any given
 <span class='texttt'>once_flag</span>: at most one shall be a returning execution; if there is a
 returning execution, it shall be the last active execution; and there are
-passive executions only if there is a returning execution. [&nbsp;<i>Note:</i> passive
+passive executions only if there is a returning execution. [&nbsp;<i>Note:</i> Passive
 executions allow other threads to reliably observe the results produced by the
 earlier returning execution. <i>&nbsp;—&nbsp;end note</i>&nbsp;]</p></div></div><div class='para' id='3'><div class='marginalizedparent'><a class='marginalized' href='#3'>3</a></div><div class='itemdescr'><p ><i>Synchronization:</i> For any given <span class='texttt'>once_flag</span>: all active executions occur in a total
 order; completion of an active execution synchronizes with (<a href='intro.multithread'>[intro.multithread]</a>)
