--- a/thread.req.html
+++ b/thread.req.html
@@ -58,7 +58,7 @@ and hardware. The finest resolution provided by an implementation is called the
 <span class='texttt'>TrivialClock</span> requirements (<a href='time.clock.req'>[time.clock.req]</a>).</p></div><div class='para' id='timing-8'><div class='marginalizedparent'><a class='marginalized' href='#timing-8'>8</a></div><p >A function that takes an argument which specifies a timeout will throw if,
 during its execution, a clock, time point, or time duration throws an exception.
 Such exceptions are referred to as <a class='hidden_link' href='#def:timeout-related_exceptions' id='def:timeout-related_exceptions'><i>timeout-related exceptions</i></a>.
-[&nbsp;<i>Note:</i> instantiations of clock, time point and duration types supplied by
+[&nbsp;<i>Note:</i> Instantiations of clock, time point and duration types supplied by
 the implementation as specified in <a href='time.clock'>[time.clock]</a> do not throw exceptions.
 <i>&nbsp;—&nbsp;end note</i>&nbsp;]</p></div><div class='footnote' id='footnote-333'><div class='footnoteNumberParent'><a class='marginalized' href='#footnote-333'>333)</a></div><p >All
 implementations for which standard time units are meaningful must necessarily
