--- a/utilities.html
+++ b/utilities.html
@@ -120,22 +120,22 @@ namespace std {
   template&lt;size_t I, class T1, class T2&gt;
     constexpr const tuple_element_t&lt;I, pair&lt;T1, T2&gt;&gt;&amp;&amp;
       get(const pair&lt;T1, T2&gt;&amp;&amp;) noexcept;
-  template &lt;class T, class U&gt;
-    constexpr T&amp; get(pair&lt;T, U&gt;&amp; p) noexcept;
-  template &lt;class T, class U&gt;
-    constexpr const T&amp; get(const pair&lt;T, U&gt;&amp; p) noexcept;
-  template &lt;class T, class U&gt;
-    constexpr T&amp;&amp; get(pair&lt;T, U&gt;&amp;&amp; p) noexcept;
-  template &lt;class T, class U&gt;
-    constexpr const T&amp;&amp; get(const pair&lt;T, U&gt;&amp;&amp; p) noexcept;
-  template &lt;class T, class U&gt;
-    constexpr T&amp; get(pair&lt;U, T&gt;&amp; p) noexcept;
-  template &lt;class T, class U&gt;
-    constexpr const T&amp; get(const pair&lt;U, T&gt;&amp; p) noexcept;
-  template &lt;class T, class U&gt;
-    constexpr T&amp;&amp; get(pair&lt;U, T&gt;&amp;&amp; p) noexcept;
-  template &lt;class T, class U&gt;
-    constexpr const T&amp;&amp; get(const pair&lt;U, T&gt;&amp;&amp; p) noexcept;
+  template &lt;class T1, class T2&gt;
+    constexpr T1&amp; get(pair&lt;T1, T2&gt;&amp; p) noexcept;
+  template &lt;class T1, class T2&gt;
+    constexpr const T1&amp; get(const pair&lt;T1, T2&gt;&amp; p) noexcept;
+  template &lt;class T1, class T2&gt;
+    constexpr T1&amp;&amp; get(pair&lt;T1, T2&gt;&amp;&amp; p) noexcept;
+  template &lt;class T1, class T2&gt;
+    constexpr const T1&amp;&amp; get(const pair&lt;T1, T2&gt;&amp;&amp; p) noexcept;
+  template &lt;class T2, class T1&gt;
+    constexpr T2&amp; get(pair&lt;T1, T2&gt;&amp; p) noexcept;
+  template &lt;class T2, class T1&gt;
+    constexpr const T2&amp; get(const pair&lt;T1, T2&gt;&amp; p) noexcept;
+  template &lt;class T2, class T1&gt;
+    constexpr T2&amp;&amp; get(pair&lt;T1, T2&gt;&amp;&amp; p) noexcept;
+  template &lt;class T2, class T1&gt;
+    constexpr const T2&amp;&amp; get(const pair&lt;T1, T2&gt;&amp;&amp; p) noexcept;
 
   <span class='comment'>// <a href='pair.piecewise'>[pair.piecewise]</a>, pair piecewise construction
 </span>  struct piecewise_construct_t { explicit piecewise_construct_t() = default; };
@@ -759,27 +759,27 @@ template&lt;size_t I, class T1, class T2&gt;
 if <span class='texttt'>I == 1</span> returns a reference to <span class='texttt'>p.second</span>;
 otherwise the program is ill-formed.
 </p></div></div><p ><span class='indexparent'><a class='index' id='get,pair'></a></span><span class='indexparent'><a class='index' id='pair,get'></a></span><code class='itemdecl'>
-template &lt;class T, class U&gt;
-  constexpr T&amp; get(pair&lt;T, U&gt;&amp; p) noexcept;
-template &lt;class T, class U&gt;
-  constexpr const T&amp; get(const pair&lt;T, U&gt;&amp; p) noexcept;
-template &lt;class T, class U&gt;
-  constexpr T&amp;&amp; get(pair&lt;T, U&gt;&amp;&amp; p) noexcept;
-template &lt;class T, class U&gt;
-  constexpr const T&amp;&amp; get(const pair&lt;T, U&gt;&amp;&amp; p) noexcept;
+template &lt;class T1, class T2&gt;
+  constexpr T1&amp; get(pair&lt;T1, T2&gt;&amp; p) noexcept;
+template &lt;class T1, class T2&gt;
+  constexpr const T1&amp; get(const pair&lt;T1, T2&gt;&amp; p) noexcept;
+template &lt;class T1, class T2&gt;
+  constexpr T1&amp;&amp; get(pair&lt;T1, T2&gt;&amp;&amp; p) noexcept;
+template &lt;class T1, class T2&gt;
+  constexpr const T1&amp;&amp; get(const pair&lt;T1, T2&gt;&amp;&amp; p) noexcept;
 </code>
-</p><div class='itemdescr'></div><div class='para' id='pair.astuple-4'><div class='marginalizedparent'><a class='marginalized' href='#pair.astuple-4'>4</a></div><div class='itemdescr'><p ><i>Requires:</i> <span class='texttt'>T</span> and <span class='texttt'>U</span> are distinct types. Otherwise, the program is ill-formed.</p></div></div><div class='para' id='pair.astuple-5'><div class='marginalizedparent'><a class='marginalized' href='#pair.astuple-5'>5</a></div><div class='itemdescr'><p ><i>Returns:</i> A reference to <span class='texttt'>p.first</span>.
+</p><div class='itemdescr'></div><div class='para' id='pair.astuple-4'><div class='marginalizedparent'><a class='marginalized' href='#pair.astuple-4'>4</a></div><div class='itemdescr'><p ><i>Requires:</i> <span class='texttt'>T1</span> and <span class='texttt'>T2</span> are distinct types. Otherwise, the program is ill-formed.</p></div></div><div class='para' id='pair.astuple-5'><div class='marginalizedparent'><a class='marginalized' href='#pair.astuple-5'>5</a></div><div class='itemdescr'><p ><i>Returns:</i> A reference to <span class='texttt'>p.first</span>.
 </p></div></div><p ><span class='indexparent'><a class='index' id='get,pair'></a></span><span class='indexparent'><a class='index' id='pair,get'></a></span><code class='itemdecl'>
-template &lt;class T, class U&gt;
-  constexpr T&amp; get(pair&lt;U, T&gt;&amp; p) noexcept;
-template &lt;class T, class U&gt;
-  constexpr const T&amp; get(const pair&lt;U, T&gt;&amp; p) noexcept;
-template &lt;class T, class U&gt;
-  constexpr T&amp;&amp; get(pair&lt;U, T&gt;&amp;&amp; p) noexcept;
-template &lt;class T, class U&gt;
-  constexpr const T&amp;&amp; get(const pair&lt;U, T&gt;&amp;&amp; p) noexcept;
+template &lt;class T2, class T1&gt;
+  constexpr T2&amp; get(pair&lt;T1, T2&gt;&amp; p) noexcept;
+template &lt;class T2, class T1&gt;
+  constexpr const T2&amp; get(const pair&lt;T1, T2&gt;&amp; p) noexcept;
+template &lt;class T2, class T1&gt;
+  constexpr T2&amp;&amp; get(pair&lt;T1, T2&gt;&amp;&amp; p) noexcept;
+template &lt;class T2, class T1&gt;
+  constexpr const T2&amp;&amp; get(const pair&lt;T1, T2&gt;&amp;&amp; p) noexcept;
 </code>
-</p><div class='itemdescr'></div><div class='para' id='pair.astuple-6'><div class='marginalizedparent'><a class='marginalized' href='#pair.astuple-6'>6</a></div><div class='itemdescr'><p ><i>Requires:</i> <span class='texttt'>T</span> and <span class='texttt'>U</span> are distinct types. Otherwise, the program is ill-formed.</p></div></div><div class='para' id='pair.astuple-7'><div class='marginalizedparent'><a class='marginalized' href='#pair.astuple-7'>7</a></div><div class='itemdescr'><p ><i>Returns:</i> A reference to <span class='texttt'>p.second</span>.
+</p><div class='itemdescr'></div><div class='para' id='pair.astuple-6'><div class='marginalizedparent'><a class='marginalized' href='#pair.astuple-6'>6</a></div><div class='itemdescr'><p ><i>Requires:</i> <span class='texttt'>T1</span> and <span class='texttt'>T2</span> are distinct types. Otherwise, the program is ill-formed.</p></div></div><div class='para' id='pair.astuple-7'><div class='marginalizedparent'><a class='marginalized' href='#pair.astuple-7'>7</a></div><div class='itemdescr'><p ><i>Returns:</i> A reference to <span class='texttt'>p.second</span>.
 </p></div></div></div><div id='pair.piecewise'><h3 ><a class='secnum' href='#pair.piecewise' style='min-width:103pt'>20.4.5</a> Piecewise construction <a class='abbr_ref' href='pair.piecewise'>[pair.piecewise]</a></h3><p ><span class='indexparent'><a class='index' id='piecewise_construct_t'></a></span><span class='indexparent'><a class='index' id='piecewise_construct'></a></span><code class='itemdecl'>
 struct piecewise_construct_t { explicit piecewise_construct_t() = default; };
 constexpr piecewise_construct_t piecewise_construct{};
@@ -9611,7 +9611,7 @@ The origin of the clock's <span class='texttt'>time_point</span> is referred to 
 before (<a href='intro.multithread'>[intro.multithread]</a>) the call returning <span class='texttt'>t2</span> and both of these calls
 occur
 before <span class='texttt'>C1::time_point::max()</span>.
-[&nbsp;<i>Note:</i> this means <span class='texttt'>C1</span> did not wrap around between <span class='texttt'>t1</span> and
+[&nbsp;<i>Note:</i> This means <span class='texttt'>C1</span> did not wrap around between <span class='texttt'>t1</span> and
 <span class='texttt'>t2</span>. <i>&nbsp;—&nbsp;end note</i>&nbsp;]</p><div class='numberedTable' id='tab:time.clock'>Table <a href='#tab:time.clock'>47</a> — Clock requirements<br><table ><tr class='rowsep'><td colspan='1' class='center'><b>Expression</b></td><td colspan='1' class='center'><b>Return type</b></td><td colspan='1' class='center'><b>Operational semantics</b></td></tr><tr class='capsep'><td class='left'> 
 <span class='texttt'>C1::rep</span> </td><td class='left'>
   An arithmetic type or a class emulating an arithmetic type </td><td class='left'>
@@ -9635,7 +9635,7 @@ satisfy the requirements of <span class='texttt'>EqualityComparable</span> (Tabl
 <span class='texttt'>CopyConstructible</span> (Table <a href='utility.arg.requirements#tab:copyconstructible'>[tab:copyconstructible]</a>),
 <span class='texttt'>CopyAssignable</span> (Table <a href='utility.arg.requirements#tab:copyassignable'>[tab:copyassignable]</a>),
 <span class='texttt'>Destructible</span> (Table <a href='utility.arg.requirements#tab:destructible'>[tab:destructible]</a>), and the requirements of
-numeric types (<a href='numeric.requirements'>[numeric.requirements]</a>). [&nbsp;<i>Note:</i> this means, in particular,
+numeric types (<a href='numeric.requirements'>[numeric.requirements]</a>). [&nbsp;<i>Note:</i> This means, in particular,
 that operations on these types will not throw exceptions. <i>&nbsp;—&nbsp;end note</i>&nbsp;]</p></li><li id='time.clock.req-4.3'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#time.clock.req-4.3'>(4.3)</a></div><p >lvalues of the types <span class='texttt'>TC::rep</span>, <span class='texttt'>TC::duration</span>, and
 <span class='texttt'>TC::time_point</span> are swappable (<a href='swappable.requirements'>[swappable.requirements]</a>),</p></li><li id='time.clock.req-4.4'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#time.clock.req-4.4'>(4.4)</a></div><p >the function <span class='texttt'>TC::now()</span> does not throw exceptions, and</p></li><li id='time.clock.req-4.5'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#time.clock.req-4.5'>(4.5)</a></div><p >the type <span class='texttt'>TC::time_point::clock</span> meets the <span class='texttt'>TrivialClock</span>
 requirements, recursively.
