--- a/basic.compound.html
+++ b/basic.compound.html
@@ -24,7 +24,7 @@ does not have a pointer-to-object type, however, because <span class='texttt'>vo
 an object type. <i>&nbsp;—&nbsp;end note</i>&nbsp;] The type of a pointer that can designate a function
 is called a <a class='hidden_link' href='#def:function_pointer_type' id='def:function_pointer_type'><i>function pointer type</i></a>.
 A pointer to objects of type <span class='texttt'>T</span> is referred to as a “pointer to
-<span class='texttt'>T</span>”. [&nbsp;<i>Example:</i> a pointer to an object of type <span class='texttt'>int</span> is
+<span class='texttt'>T</span>”. [&nbsp;<i>Example:</i> A pointer to an object of type <span class='texttt'>int</span> is
 referred to as “pointer to <span class='texttt'>int</span> ” and a pointer to an object of
 class <span class='texttt'>X</span> is called a “pointer to <span class='texttt'>X</span>”. <i>&nbsp;—&nbsp;end example</i>&nbsp;]
 Except for pointers to static members, text referring to “pointers”
