--- a/basic.html
+++ b/basic.html
@@ -95,7 +95,7 @@ an explicit instantiation declaration (<a href='temp.explicit'>[temp.explicit]</
 </p></li><li id='def-2.18'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#def-2.18'>(2.18)</a></div><p >it is
 an explicit specialization (<a href='temp.expl.spec'>[temp.expl.spec]</a>) whose
 <i ><a href='dcl.dcl#nt:declaration'>declaration</a></i> is not a definition.
-</p></li></ul><p >[&nbsp;<i>Example:</i> all but one of the following are definitions:
+</p></li></ul><p >[&nbsp;<i>Example:</i> All but one of the following are definitions:
 <span class='indexparent'><a class='index' id='example,definition'></a></span></p><pre class='codeblock'>
 int a;                          <span class='comment'>// defines <span class='texttt'>a</span>
 </span>extern const int c = 1;         <span class='comment'>// defines <span class='texttt'>c</span>
@@ -129,7 +129,7 @@ move constructor (<a href='class.copy'>[class.copy]</a>),
 copy assignment operator (<a href='class.copy'>[class.copy]</a>),
 move assignment operator (<a href='class.copy'>[class.copy]</a>),
 or destructor (<a href='class.dtor'>[class.dtor]</a>) member functions. <i>&nbsp;—&nbsp;end note</i>&nbsp;]
-[&nbsp;<i>Example:</i> given</p><pre class='codeblock'>
+[&nbsp;<i>Example:</i> Given</p><pre class='codeblock'>
 #include &lt;string&gt;
 
 struct C {
@@ -250,7 +250,7 @@ implicitly defined (see <a href='class.ctor'>[class.ctor]</a>, <a href='class.dt
 <a href='class.copy'>[class.copy]</a>). An inline function or variable shall be defined in every
 translation unit in which it is odr-used outside of a discarded statement.</p></div><div class='para' id='def.odr-5'><div class='marginalizedparent'><a class='marginalized' href='#def.odr-5'>5</a></div><p ><span class='indexparent'><a class='index' id='type,incomplete'></a></span>Exactly one definition of a class is required in a translation unit if
 the class is used in a way that requires the class type to be complete.
-[&nbsp;<i>Example:</i> the following complete translation unit is well-formed,
+[&nbsp;<i>Example:</i> The following complete translation unit is well-formed,
 even though it never defines <span class='texttt'>X</span>:</p><pre class='codeblock'>
 struct X;                       <span class='comment'>// declare <span class='texttt'>X</span> as a struct type
 </span>struct X* x1;                   <span class='comment'>// use <span class='texttt'>X</span> in pointer formation
@@ -1650,7 +1650,7 @@ The <span class='texttt'>main</span> function shall not be declared with a
 declares a variable <span class='texttt'>main</span> at global scope or that declares the name
 <span class='texttt'>main</span> with C language linkage (in any namespace) is ill-formed.
 The name <span class='texttt'>main</span> is
-not otherwise reserved. [&nbsp;<i>Example:</i> member functions, classes, and
+not otherwise reserved. [&nbsp;<i>Example:</i> Member functions, classes, and
 enumerations can be called <span class='texttt'>main</span>, as can entities in other
 namespaces. <i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='para' id='start.main-4'><div class='marginalizedparent'><a class='marginalized' href='#start.main-4'>4</a></div><p ><span class='indexparent'><a class='index' id='exit'></a></span><span class='indexparent'><a class='index' id='exit'></a></span><span class='indexparent'><a class='index' id='termination,program'></a></span>Terminating the program
 without leaving the current block (e.g., by calling the function
@@ -2087,7 +2087,7 @@ is that of their complete object (<a href='intro.object'>[intro.object]</a>).
 object or reference.
 An object is said to have <a class='hidden_link' href='#def:initialization,non-vacuous' id='def:initialization,non-vacuous'><i>non-vacuous initialization</i></a> if it is of a class or
 aggregate type and it or one of its subobjects is initialized by a constructor
-other than a trivial default constructor. [&nbsp;<i>Note:</i> initialization by a
+other than a trivial default constructor. [&nbsp;<i>Note:</i> Initialization by a
 trivial copy/move constructor is non-vacuous initialization. <i>&nbsp;—&nbsp;end note</i>&nbsp;]
 The lifetime of an object of type <span class='texttt'>T</span> begins when:
 </p><ul class='itemize'><li id='life-1.1'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#life-1.1'>(1.1)</a></div><p >storage with the proper alignment and size for type <span class='texttt'>T</span> is
@@ -2506,7 +2506,7 @@ collectively called
 A synonym for integral type is
 <span class='indexparent'><a class='index' id='signed_integer_representation,ones&#39;_complement'></a></span><span class='indexparent'><a class='index' id='signed_integer_representation,two&#39;s_complement'></a></span><span class='indexparent'><a class='index' id='signed_integer_representation,signed_magnitude'></a></span><a class='hidden_link' href='#def:integer_type' id='def:integer_type'><i>integer type</i></a>. The representations of integral types shall
 define values by use of a pure binary numeration system.<a class='footnotenum' href='#footnote-52'>52</a>
-[&nbsp;<i>Example:</i> this International Standard permits two's complement,
+[&nbsp;<i>Example:</i> This International Standard permits two's complement,
 ones' complement and signed magnitude representations for integral types.
 <i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='para' id='fundamental-8'><div class='marginalizedparent'><a class='marginalized' href='#fundamental-8'>8</a></div><p >There are three <a class='hidden_link' href='#def:floating_point_type' id='def:floating_point_type'><i>floating-point</i></a> types:
 <span class='indexparent'><a class='index' id='type,float'></a></span><span class='texttt'>float</span>,
@@ -2590,7 +2590,7 @@ does not have a pointer-to-object type, however, because <span class='texttt'>vo
 an object type. <i>&nbsp;—&nbsp;end note</i>&nbsp;] The type of a pointer that can designate a function
 is called a <a class='hidden_link' href='#def:function_pointer_type' id='def:function_pointer_type'><i>function pointer type</i></a>.
 A pointer to objects of type <span class='texttt'>T</span> is referred to as a “pointer to
-<span class='texttt'>T</span>”. [&nbsp;<i>Example:</i> a pointer to an object of type <span class='texttt'>int</span> is
+<span class='texttt'>T</span>”. [&nbsp;<i>Example:</i> A pointer to an object of type <span class='texttt'>int</span> is
 referred to as “pointer to <span class='texttt'>int</span> ” and a pointer to an object of
 class <span class='texttt'>X</span> is called a “pointer to <span class='texttt'>X</span>”. <i>&nbsp;—&nbsp;end example</i>&nbsp;]
 Except for pointers to static members, text referring to “pointers”
