--- a/basic.types.html
+++ b/basic.types.html
@@ -226,7 +226,7 @@ collectively called
 A synonym for integral type is
 <span class='indexparent'><a class='index' id='signed_integer_representation,ones&#39;_complement'></a></span><span class='indexparent'><a class='index' id='signed_integer_representation,two&#39;s_complement'></a></span><span class='indexparent'><a class='index' id='signed_integer_representation,signed_magnitude'></a></span><a class='hidden_link' href='#def:integer_type' id='def:integer_type'><i>integer type</i></a>. The representations of integral types shall
 define values by use of a pure binary numeration system.<a class='footnotenum' href='#footnote-52'>52</a>
-[&nbsp;<i>Example:</i> this International Standard permits two's complement,
+[&nbsp;<i>Example:</i> This International Standard permits two's complement,
 ones' complement and signed magnitude representations for integral types.
 <i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='para' id='basic.fundamental-8'><div class='marginalizedparent'><a class='marginalized' href='#basic.fundamental-8'>8</a></div><p >There are three <a class='hidden_link' href='#def:floating_point_type' id='def:floating_point_type'><i>floating-point</i></a> types:
 <span class='indexparent'><a class='index' id='type,float'></a></span><span class='texttt'>float</span>,
@@ -310,7 +310,7 @@ does not have a pointer-to-object type, however, because <span class='texttt'>vo
 an object type. <i>&nbsp;—&nbsp;end note</i>&nbsp;] The type of a pointer that can designate a function
 is called a <a class='hidden_link' href='#def:function_pointer_type' id='def:function_pointer_type'><i>function pointer type</i></a>.
 A pointer to objects of type <span class='texttt'>T</span> is referred to as a “pointer to
-<span class='texttt'>T</span>”. [&nbsp;<i>Example:</i> a pointer to an object of type <span class='texttt'>int</span> is
+<span class='texttt'>T</span>”. [&nbsp;<i>Example:</i> A pointer to an object of type <span class='texttt'>int</span> is
 referred to as “pointer to <span class='texttt'>int</span> ” and a pointer to an object of
 class <span class='texttt'>X</span> is called a “pointer to <span class='texttt'>X</span>”. <i>&nbsp;—&nbsp;end example</i>&nbsp;]
 Except for pointers to static members, text referring to “pointers”
