--- a/dcl.attr.deprecated.html
+++ b/dcl.attr.deprecated.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html><html lang='en'><head><title>[dcl.attr.deprecated]</title><meta charset='UTF-8'/><link rel='stylesheet' type='text/css' href='14882.css'/></head><body><div class='wrapper'><h1 ><a class='secnum' style='min-width:73pt'>7</a> Declarations <a class='abbr_ref' href='./#dcl.dcl'>[dcl.dcl]</a></h1><h2 ><a class='secnum' style='min-width:88pt'>7.6</a> Attributes <a class='abbr_ref' href='dcl.attr#deprecated'>[dcl.attr]</a></h2><div id='dcl.attr.deprecated'><h3 ><a class='secnum' style='min-width:103pt'>7.6.4</a> Deprecated attribute <a class='abbr_ref'>[dcl.attr.deprecated]</a></h3><p ><span class='indexparent'><a class='index' id='attribute,deprecated'></a></span></p><div class='para' id='1'><div class='marginalizedparent'><a class='marginalized' href='#1'>1</a></div><p >The <i ><a href='dcl.attr.grammar#nt:attribute-token'>attribute-token</a></i> <span class='texttt'>deprecated</span> can be used to mark names and entities
-whose use is still allowed, but is discouraged for some reason. [&nbsp;<i>Note:</i> in particular,
+whose use is still allowed, but is discouraged for some reason. [&nbsp;<i>Note:</i> In particular,
 <span class='texttt'>deprecated</span> is appropriate for names and entities that are deemed obsolescent or
 unsafe. <i>&nbsp;—&nbsp;end note</i>&nbsp;] It shall appear at most once in each <i ><a href='dcl.attr.grammar#nt:attribute-list'>attribute-list</a></i>. An
 <i ><a href='dcl.attr.grammar#nt:attribute-argument-clause'>attribute-argument-clause</a></i> may be present and, if present, it shall have the form:</p><pre class='codeblock'>
 ( <span class='grammarterm'>string-literal</span> )
-</pre><p >[&nbsp;<i>Note:</i> the <i ><a href='lex.string#nt:string-literal'>string-literal</a></i> in the <i ><a href='dcl.attr.grammar#nt:attribute-argument-clause'>attribute-argument-clause</a></i>
+</pre><p >[&nbsp;<i>Note:</i> The <i ><a href='lex.string#nt:string-literal'>string-literal</a></i> in the <i ><a href='dcl.attr.grammar#nt:attribute-argument-clause'>attribute-argument-clause</a></i>
 could be used to explain the rationale for deprecation and/or to suggest a replacing entity.
 <i>&nbsp;—&nbsp;end note</i>&nbsp;]</p></div><div class='para' id='2'><div class='marginalizedparent'><a class='marginalized' href='#2'>2</a></div><p >The attribute may be applied to the declaration of
 a class,
