--- a/dcl.dcl.html
+++ b/dcl.dcl.html
@@ -2626,12 +2626,12 @@ but its first parameter does not. Therefore, function <span class='texttt'>h</sp
 <span class='texttt'>g</span> carries a dependency into <span class='texttt'>g</span>, but its second call does not. The
 implementation might need to insert a fence prior to the second call to
 <span class='texttt'>g</span>.</p><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]<span class='indexparent'><a class='index' id='attribute'></a></span><span class='indexparent'><a class='index' id='declaration'></a></span></p></div></div><div id='dcl.attr.deprecated'><h3 ><a class='secnum' href='#dcl.attr.deprecated' style='min-width:103pt'>7.6.4</a> Deprecated attribute <a class='abbr_ref' href='dcl.attr.deprecated'>[dcl.attr.deprecated]</a></h3><p ><span class='indexparent'><a class='index' id='attribute,deprecated'></a></span></p><div class='para' id='dcl.attr.deprecated-1'><div class='marginalizedparent'><a class='marginalized' href='#dcl.attr.deprecated-1'>1</a></div><p >The <i ><a href='dcl.attr.grammar#nt:attribute-token'>attribute-token</a></i> <span class='texttt'>deprecated</span> can be used to mark names and entities
-whose use is still allowed, but is discouraged for some reason. [&nbsp;<i>Note:</i> in particular,
+whose use is still allowed, but is discouraged for some reason. [&nbsp;<i>Note:</i> In particular,
 <span class='texttt'>deprecated</span> is appropriate for names and entities that are deemed obsolescent or
 unsafe. <i>&nbsp;—&nbsp;end note</i>&nbsp;] It shall appear at most once in each <i ><a href='dcl.attr.grammar#nt:attribute-list'>attribute-list</a></i>. An
 <i ><a href='dcl.attr.grammar#nt:attribute-argument-clause'>attribute-argument-clause</a></i> may be present and, if present, it shall have the form:</p><pre class='codeblock'>
 ( <span class='grammarterm'>string-literal</span> )
-</pre><p >[&nbsp;<i>Note:</i> the <i ><a href='lex.string#nt:string-literal'>string-literal</a></i> in the <i ><a href='dcl.attr.grammar#nt:attribute-argument-clause'>attribute-argument-clause</a></i>
+</pre><p >[&nbsp;<i>Note:</i> The <i ><a href='lex.string#nt:string-literal'>string-literal</a></i> in the <i ><a href='dcl.attr.grammar#nt:attribute-argument-clause'>attribute-argument-clause</a></i>
 could be used to explain the rationale for deprecation and/or to suggest a replacing entity.
 <i>&nbsp;—&nbsp;end note</i>&nbsp;]</p></div><div class='para' id='dcl.attr.deprecated-2'><div class='marginalizedparent'><a class='marginalized' href='#dcl.attr.deprecated-2'>2</a></div><p >The attribute may be applied to the declaration of
 a class,
