--- a/pair.astuple.html
+++ b/pair.astuple.html
@@ -27,25 +27,25 @@ template&lt;size_t I, class T1, class T2&gt;
 if <span class='texttt'>I == 1</span> returns a reference to <span class='texttt'>p.second</span>;
 otherwise the program is ill-formed.
 </p></div></div><p ><span class='indexparent'><a class='index' id='get,pair'></a></span><span class='indexparent'><a class='index' id='pair,get'></a></span><code class='itemdecl'>
-template &lt;class T, class U&gt;
-  constexpr T&amp; get(pair&lt;T, U&gt;&amp; p) noexcept;
-template &lt;class T, class U&gt;
-  constexpr const T&amp; get(const pair&lt;T, U&gt;&amp; p) noexcept;
-template &lt;class T, class U&gt;
-  constexpr T&amp;&amp; get(pair&lt;T, U&gt;&amp;&amp; p) noexcept;
-template &lt;class T, class U&gt;
-  constexpr const T&amp;&amp; get(const pair&lt;T, U&gt;&amp;&amp; p) noexcept;
+template &lt;class T1, class T2&gt;
+  constexpr T1&amp; get(pair&lt;T1, T2&gt;&amp; p) noexcept;
+template &lt;class T1, class T2&gt;
+  constexpr const T1&amp; get(const pair&lt;T1, T2&gt;&amp; p) noexcept;
+template &lt;class T1, class T2&gt;
+  constexpr T1&amp;&amp; get(pair&lt;T1, T2&gt;&amp;&amp; p) noexcept;
+template &lt;class T1, class T2&gt;
+  constexpr const T1&amp;&amp; get(const pair&lt;T1, T2&gt;&amp;&amp; p) noexcept;
 </code>
-</p><div class='itemdescr'></div><div class='para' id='4'><div class='marginalizedparent'><a class='marginalized' href='#4'>4</a></div><div class='itemdescr'><p ><i>Requires:</i> <span class='texttt'>T</span> and <span class='texttt'>U</span> are distinct types. Otherwise, the program is ill-formed.</p></div></div><div class='para' id='5'><div class='marginalizedparent'><a class='marginalized' href='#5'>5</a></div><div class='itemdescr'><p ><i>Returns:</i> A reference to <span class='texttt'>p.first</span>.
+</p><div class='itemdescr'></div><div class='para' id='4'><div class='marginalizedparent'><a class='marginalized' href='#4'>4</a></div><div class='itemdescr'><p ><i>Requires:</i> <span class='texttt'>T1</span> and <span class='texttt'>T2</span> are distinct types. Otherwise, the program is ill-formed.</p></div></div><div class='para' id='5'><div class='marginalizedparent'><a class='marginalized' href='#5'>5</a></div><div class='itemdescr'><p ><i>Returns:</i> A reference to <span class='texttt'>p.first</span>.
 </p></div></div><p ><span class='indexparent'><a class='index' id='get,pair'></a></span><span class='indexparent'><a class='index' id='pair,get'></a></span><code class='itemdecl'>
-template &lt;class T, class U&gt;
-  constexpr T&amp; get(pair&lt;U, T&gt;&amp; p) noexcept;
-template &lt;class T, class U&gt;
-  constexpr const T&amp; get(const pair&lt;U, T&gt;&amp; p) noexcept;
-template &lt;class T, class U&gt;
-  constexpr T&amp;&amp; get(pair&lt;U, T&gt;&amp;&amp; p) noexcept;
-template &lt;class T, class U&gt;
-  constexpr const T&amp;&amp; get(const pair&lt;U, T&gt;&amp;&amp; p) noexcept;
+template &lt;class T2, class T1&gt;
+  constexpr T2&amp; get(pair&lt;T1, T2&gt;&amp; p) noexcept;
+template &lt;class T2, class T1&gt;
+  constexpr const T2&amp; get(const pair&lt;T1, T2&gt;&amp; p) noexcept;
+template &lt;class T2, class T1&gt;
+  constexpr T2&amp;&amp; get(pair&lt;T1, T2&gt;&amp;&amp; p) noexcept;
+template &lt;class T2, class T1&gt;
+  constexpr const T2&amp;&amp; get(const pair&lt;T1, T2&gt;&amp;&amp; p) noexcept;
 </code>
-</p><div class='itemdescr'></div><div class='para' id='6'><div class='marginalizedparent'><a class='marginalized' href='#6'>6</a></div><div class='itemdescr'><p ><i>Requires:</i> <span class='texttt'>T</span> and <span class='texttt'>U</span> are distinct types. Otherwise, the program is ill-formed.</p></div></div><div class='para' id='7'><div class='marginalizedparent'><a class='marginalized' href='#7'>7</a></div><div class='itemdescr'><p ><i>Returns:</i> A reference to <span class='texttt'>p.second</span>.
+</p><div class='itemdescr'></div><div class='para' id='6'><div class='marginalizedparent'><a class='marginalized' href='#6'>6</a></div><div class='itemdescr'><p ><i>Requires:</i> <span class='texttt'>T1</span> and <span class='texttt'>T2</span> are distinct types. Otherwise, the program is ill-formed.</p></div></div><div class='para' id='7'><div class='marginalizedparent'><a class='marginalized' href='#7'>7</a></div><div class='itemdescr'><p ><i>Returns:</i> A reference to <span class='texttt'>p.second</span>.
 </p></div></div></div></div></body></html>
