--- a/stmt.ambig.html
+++ b/stmt.ambig.html
@@ -66,13 +66,9 @@ int a, (*(*b)(T2))(int), c, d;
 void f() {
   <span class='comment'>// disambiguation requires this to be parsed as a declaration:
 </span>  T1(a) = 3,
-  T2(4),                        <span class='comment'>// <span class='texttt'>T2</span> will be declared as
-</span>  (*(*b)(T2(c)))(int(d));       <span class='comment'>// a variable of type <span class='texttt'>T1</span>
-</span>                                <span class='comment'>// but this will not allow
-</span>                                <span class='comment'>// the last part of the
-</span>                                <span class='comment'>// declaration to parse
-</span>                                <span class='comment'>// properly since it depends
-</span>                                <span class='comment'>// on <span class='texttt'>T2</span> being a type-name
+  T2(4),                        <span class='comment'>// <span class='texttt'>T2</span> will be declared as a variable of type <span class='texttt'>T1</span>, but this will not
+</span>  (*(*b)(T2(c)))(int(d));       <span class='comment'>// allow the last part of the declaration to parse properly,
+</span>                                <span class='comment'>// since it depends on <span class='texttt'>T2</span> being a type-name
 </span>}
 </pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]<span class='indexparent'><a class='index' id='statement'></a></span>
 </p></div></div></div></body></html>
