--- a/temp.dep.type.html
+++ b/temp.dep.type.html
@@ -103,7 +103,7 @@ in which the
 refers to the current instantiation
 and that, when looked up, refers to at least one member of a class that is
 the current
-instantiation or a non-dependent base class thereof. [&nbsp;<i>Note:</i> if no such
+instantiation or a non-dependent base class thereof. [&nbsp;<i>Note:</i> If no such
 member is found, and the current instantiation has any dependent base classes,
 then the <i ><a href='expr.prim.id.qual#nt:qualified-id'>qualified-id</a></i> is a member of an unknown specialization;
 see below. <i>&nbsp;—&nbsp;end note</i>&nbsp;]</p></li><li id='5.3'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#5.3'>(5.3)</a></div><p >An <i ><a href='expr.prim.id#nt:id-expression'>id-expression</a></i> denoting the member in a class member access
@@ -111,7 +111,7 @@ expression (<a href='expr.ref'>[expr.ref]</a>) for which the type of the object 
 current instantiation, and the <i ><a href='expr.prim.id#nt:id-expression'>id-expression</a></i>, when looked
 up (<a href='basic.lookup.classref'>[basic.lookup.classref]</a>), refers to at least one member of a class
 that is the current
-instantiation or a non-dependent base class thereof. [&nbsp;<i>Note:</i> if no such
+instantiation or a non-dependent base class thereof. [&nbsp;<i>Note:</i> If no such
 member is found, and the current instantiation has any dependent base classes,
 then the <i ><a href='expr.prim.id#nt:id-expression'>id-expression</a></i> is a member of an unknown specialization;
 see below. <i>&nbsp;—&nbsp;end note</i>&nbsp;]
