--- a/thread.mutex.html
+++ b/thread.mutex.html
@@ -62,7 +62,7 @@ construction is incorrect.
 </p></li></ul></div><div class='para' id='requirements.mutex-5'><div class='marginalizedparent'><a class='marginalized' href='#requirements.mutex-5'>5</a></div><p >The implementation shall provide lock and unlock operations, as described below.
 For purposes of determining the existence of a data race, these behave as
 atomic operations (<a href='intro.multithread'>[intro.multithread]</a>). The lock and unlock operations on
-a single mutex shall appear to occur in a single total order. [&nbsp;<i>Note:</i> this
+a single mutex shall appear to occur in a single total order. [&nbsp;<i>Note:</i> This
 can be viewed as the modification order (<a href='intro.multithread'>[intro.multithread]</a>) of the
 mutex. <i>&nbsp;—&nbsp;end note</i>&nbsp;]
 [&nbsp;<i>Note:</i> Construction and
@@ -861,7 +861,7 @@ An exceptional execution shall propagate the exception to the caller of
 <span class='texttt'>call_once</span>. Among all executions of <span class='texttt'>call_once</span> for any given
 <span class='texttt'>once_flag</span>: at most one shall be a returning execution; if there is a
 returning execution, it shall be the last active execution; and there are
-passive executions only if there is a returning execution. [&nbsp;<i>Note:</i> passive
+passive executions only if there is a returning execution. [&nbsp;<i>Note:</i> Passive
 executions allow other threads to reliably observe the results produced by the
 earlier returning execution. <i>&nbsp;—&nbsp;end note</i>&nbsp;]</p></div></div><div class='para' id='thread.once.callonce-3'><div class='marginalizedparent'><a class='marginalized' href='#thread.once.callonce-3'>3</a></div><div class='itemdescr'><p ><i>Synchronization:</i> For any given <span class='texttt'>once_flag</span>: all active executions occur in a total
 order; completion of an active execution synchronizes with (<a href='intro.multithread'>[intro.multithread]</a>)
