--- a/thread.mutex.requirements.mutex.html
+++ b/thread.mutex.requirements.mutex.html
@@ -14,7 +14,7 @@ construction is incorrect.
 </p></li></ul></div><div class='para' id='5'><div class='marginalizedparent'><a class='marginalized' href='#5'>5</a></div><p >The implementation shall provide lock and unlock operations, as described below.
 For purposes of determining the existence of a data race, these behave as
 atomic operations (<a href='intro.multithread'>[intro.multithread]</a>). The lock and unlock operations on
-a single mutex shall appear to occur in a single total order. [&nbsp;<i>Note:</i> this
+a single mutex shall appear to occur in a single total order. [&nbsp;<i>Note:</i> This
 can be viewed as the modification order (<a href='intro.multithread'>[intro.multithread]</a>) of the
 mutex. <i>&nbsp;—&nbsp;end note</i>&nbsp;]
 [&nbsp;<i>Note:</i> Construction and
