--- a/time.html
+++ b/time.html
@@ -186,7 +186,7 @@ The origin of the clock's <span class='texttt'>time_point</span> is referred to 
 before (<a href='intro.multithread'>[intro.multithread]</a>) the call returning <span class='texttt'>t2</span> and both of these calls
 occur
 before <span class='texttt'>C1::time_point::max()</span>.
-[&nbsp;<i>Note:</i> this means <span class='texttt'>C1</span> did not wrap around between <span class='texttt'>t1</span> and
+[&nbsp;<i>Note:</i> This means <span class='texttt'>C1</span> did not wrap around between <span class='texttt'>t1</span> and
 <span class='texttt'>t2</span>. <i>&nbsp;—&nbsp;end note</i>&nbsp;]</p><div class='numberedTable' id='tab:time.clock'>Table <a href='#tab:time.clock'>47</a> — Clock requirements<br><table ><tr class='rowsep'><td colspan='1' class='center'><b>Expression</b></td><td colspan='1' class='center'><b>Return type</b></td><td colspan='1' class='center'><b>Operational semantics</b></td></tr><tr class='capsep'><td class='left'> 
 <span class='texttt'>C1::rep</span> </td><td class='left'>
   An arithmetic type or a class emulating an arithmetic type </td><td class='left'>
@@ -210,7 +210,7 @@ satisfy the requirements of <span class='texttt'>EqualityComparable</span> (Tabl
 <span class='texttt'>CopyConstructible</span> (Table <a href='utility.arg.requirements#tab:copyconstructible'>[tab:copyconstructible]</a>),
 <span class='texttt'>CopyAssignable</span> (Table <a href='utility.arg.requirements#tab:copyassignable'>[tab:copyassignable]</a>),
 <span class='texttt'>Destructible</span> (Table <a href='utility.arg.requirements#tab:destructible'>[tab:destructible]</a>), and the requirements of
-numeric types (<a href='numeric.requirements'>[numeric.requirements]</a>). [&nbsp;<i>Note:</i> this means, in particular,
+numeric types (<a href='numeric.requirements'>[numeric.requirements]</a>). [&nbsp;<i>Note:</i> This means, in particular,
 that operations on these types will not throw exceptions. <i>&nbsp;—&nbsp;end note</i>&nbsp;]</p></li><li id='clock.req-4.3'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#clock.req-4.3'>(4.3)</a></div><p >lvalues of the types <span class='texttt'>TC::rep</span>, <span class='texttt'>TC::duration</span>, and
 <span class='texttt'>TC::time_point</span> are swappable (<a href='swappable.requirements'>[swappable.requirements]</a>),</p></li><li id='clock.req-4.4'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#clock.req-4.4'>(4.4)</a></div><p >the function <span class='texttt'>TC::now()</span> does not throw exceptions, and</p></li><li id='clock.req-4.5'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#clock.req-4.5'>(4.5)</a></div><p >the type <span class='texttt'>TC::time_point::clock</span> meets the <span class='texttt'>TrivialClock</span>
 requirements, recursively.
