--- a/utility.html
+++ b/utility.html
@@ -96,22 +96,22 @@ namespace std {
   template&lt;size_t I, class T1, class T2&gt;
     constexpr const tuple_element_t&lt;I, pair&lt;T1, T2&gt;&gt;&amp;&amp;
       get(const pair&lt;T1, T2&gt;&amp;&amp;) noexcept;
-  template &lt;class T, class U&gt;
-    constexpr T&amp; get(pair&lt;T, U&gt;&amp; p) noexcept;
-  template &lt;class T, class U&gt;
-    constexpr const T&amp; get(const pair&lt;T, U&gt;&amp; p) noexcept;
-  template &lt;class T, class U&gt;
-    constexpr T&amp;&amp; get(pair&lt;T, U&gt;&amp;&amp; p) noexcept;
-  template &lt;class T, class U&gt;
-    constexpr const T&amp;&amp; get(const pair&lt;T, U&gt;&amp;&amp; p) noexcept;
-  template &lt;class T, class U&gt;
-    constexpr T&amp; get(pair&lt;U, T&gt;&amp; p) noexcept;
-  template &lt;class T, class U&gt;
-    constexpr const T&amp; get(const pair&lt;U, T&gt;&amp; p) noexcept;
-  template &lt;class T, class U&gt;
-    constexpr T&amp;&amp; get(pair&lt;U, T&gt;&amp;&amp; p) noexcept;
-  template &lt;class T, class U&gt;
-    constexpr const T&amp;&amp; get(const pair&lt;U, T&gt;&amp;&amp; p) noexcept;
+  template &lt;class T1, class T2&gt;
+    constexpr T1&amp; get(pair&lt;T1, T2&gt;&amp; p) noexcept;
+  template &lt;class T1, class T2&gt;
+    constexpr const T1&amp; get(const pair&lt;T1, T2&gt;&amp; p) noexcept;
+  template &lt;class T1, class T2&gt;
+    constexpr T1&amp;&amp; get(pair&lt;T1, T2&gt;&amp;&amp; p) noexcept;
+  template &lt;class T1, class T2&gt;
+    constexpr const T1&amp;&amp; get(const pair&lt;T1, T2&gt;&amp;&amp; p) noexcept;
+  template &lt;class T2, class T1&gt;
+    constexpr T2&amp; get(pair&lt;T1, T2&gt;&amp; p) noexcept;
+  template &lt;class T2, class T1&gt;
+    constexpr const T2&amp; get(const pair&lt;T1, T2&gt;&amp; p) noexcept;
+  template &lt;class T2, class T1&gt;
+    constexpr T2&amp;&amp; get(pair&lt;T1, T2&gt;&amp;&amp; p) noexcept;
+  template &lt;class T2, class T1&gt;
+    constexpr const T2&amp;&amp; get(const pair&lt;T1, T2&gt;&amp;&amp; p) noexcept;
 
   <span class='comment'>// <a href='pair.piecewise'>[pair.piecewise]</a>, pair piecewise construction
 </span>  struct piecewise_construct_t { explicit piecewise_construct_t() = default; };
